# zip-code-database

./: .gitignore  Justfile  TODO  commands.md  docker-compose.yml  readme.md
.github/workflows/: publish.yml
city_state/: convert_zcta_place_to_zip_city_state.py
data/: zip-codes.csv  zip_code_to_city_and_state.csv  zip_code_with_population.csv  zip_codes.db  zip_codes.json  zip_codes.sql  zip_codes_with_city_state_pk.csv  zip_codes_with_pk.csv
population/: clean_zip_data.py  zip_code_with_population.csv
server/: main.py  mise.toml  pyproject.toml  test_main.py
