[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "structlog-config[fastapi]>=0.7.0",
    "uvicorn>=0.38.0",
]
